rust/macros/tests/invalid/target/debug/deps/macros-f709be1e4f62fab4.d
/Users/dalton.maahs/dev/exercism/rust/macros/tests/invalid/target/debug/deps/macros-f709be1e4f62fab4.rmeta: /Users/dalton.maahs/dev/exercism/rust/macros/src/lib.rs

/Users/dalton.maahs/dev/exercism/rust/macros/tests/invalid/target/debug/deps/macros-f709be1e4f62fab4.d: /Users/dalton.maahs/dev/exercism/rust/macros/src/lib.rs

/Users/dalton.maahs/dev/exercism/rust/macros/src/lib.rs:
